...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hkN-dr-0eE">
                                                <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
                                                <subviews>
                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQA-OX-Ge0">
                                                        <rect key="frame" x="136" y="26" width="51" height="31"/>
                                                        <animations/>
                                                        <accessibility key="accessibilityConfiguration" identifier="modeSwitch"/>
                                                        <color key="onTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                        <connections>
                                                            <action selector="actionSwitchValueChange:" destination="an7-L6-jG0" eventType="valueChanged" id="Zik-bc-dha"/>
                                                        </connections>
                                                    </switch>
                                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sms" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNW-BM-SK0">
...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rNe-14-ryi">
                                                <rect key="frame" x="0.0" y="84" width="320" height="127"/>
                                                <subviews>
                                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rna-ZW-q3w">
                                                        <rect key="frame" x="31" y="20" width="62" height="21"/>
                                                        <animations/>
                                                        <accessibility key="accessibilityConfiguration" identifier="userDataLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" alpha="0.74999999999999978" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIH-Z2-M36">
                                                        <rect key="frame" x="31" y="49" width="228" height="30"/>
                                                        <animations/>
                                                        <accessibility key="accessibilityConfiguration" identifier="userDataField"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <action selector="actionBeginEditTextField:" destination="an7-L6-jG0" eventType="editingDidBegin" id="7eI-hJ-KEh"/>
                                                            <action selector="actionEndEditTextField:" destination="an7-L6-jG0" eventType="editingDidEnd" id="Hkp-Ip-kkN"/>
                                                            <action selector="actionEndOnExit:" destination="an7-L6-jG0" eventType="editingDidEndOnExit" id="gun-9a-K6c"/>
                                                        </connections>
                                                    </textField>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ek7-1E-PFG">
                                                        <rect key="frame" x="267" y="53" width="22" height="22"/>
                                                        <animations/>
                                                        <accessibility key="accessibilityConfiguration" identifier="addressBookBtn"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="22" id="JLU-Bj-HZI"/>
                                                        </constraints>
                                                        <color key="tintColor" red="0.86287788720000003" green="0.86287788720000003" blue="0.86287788720000003" alpha="1" colorSpace="calibratedRGB"/>
                                                        <state key="normal">
                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hGg-gT-ktc">
                                                        <rect key="frame" x="38" y="27" width="240" height="128"/>
                                                        <animations/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="messageTextArea"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="128" id="JOz-pi-ofs"/>
                                                            <constraint firstAttribute="width" constant="240" id="jet-ba-fuf"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
