...
                                                       [self processAddressBookOpenAction:NO];
                                                   }];
    [alert addAction:save];
    [alert addAction:addressBook];
    [alert addTextFieldWithConfigurationHandler:^(UITextField *textField) {
        textField.text = [self.identificationService getUserIdentification];
        textField.placeholder = @"identification";
    }];
    [self presentViewController:alert animated:YES completion:nil];
}

/*
 Otwiera alert o braki preferencji.
...
