#import "Consts.h"
#import <Foundation/Foundation.h>

NSString * const PREFS_MY_CONSTANT = @"prefs_my_constant";
NSString * const LABEL_ERROR = @"Error";
NSString * const LABEL_OK = @"Ok";
NSString * const LABEL_CANCEL = @"Cancel";
NSString * const LABEL_STOP = @"Stop";
NSString * const LABEL_CONFIRMATION = @"Confirmation";
NSString * const LABEL_EXIT_QUESTION = @"Do you want to exit?";
NSString * const PIC_PERSON_PATH = @"multimedia/pics/person.png";
NSString * const PIC_BG_IPAD_PATH = @"multimedia/pics/see_ipad.png";
NSString * const PIC_BG_IPHONE_PATH = @"multimedia/pics/see_iphone.png";
NSString * const LABEL_ADD_USER_DATA_INFO = @"According to security issues please provide manualy your's identification data 'email,phone number' or 'email' or 'phone number'";
NSString * const LABEL_NAVIGATE_MSG = @"Choose navigation type";
NSString * const LABEL_NAVIGATE_TITLE = @"Navigation";
NSString * const LABEL_NAVIGATE_WALK = @"Walk";
NSString * const LABEL_NAVIGATE_DRIVE = @"Drive";
NSString * const LABEL_NAVIGATE_COMMUNICATE = @"Transit";
NSString * const LABEL_IDENTIFICATION = @"Identification";
NSString * const LABEL_SAVE = @"Save";
NSString * const LABEL_ADDRESS_BOOK = @"Address book";
NSString * const LABEL_ADD_USER_DATA_INFO_2 = @"Due to security issues please provide manualy your's identification data . Please press \"Pref\" button.";
NSString * const LABEL_INFORMATION = @"Information";
NSString * const LABEL_CONTINUE = @"Contiune";
NSString * const LABEL_MESSAGE = @"Message";
NSString * const SL_UID = @"SL_UID";
NSString * const LABEL_ADDRESS = @"Email address:";
NSString * const LABEL_PH_ADDRESS = @"address here";
NSString * const LABEL_PHONE_NUMBER = @"Phone numer:";
NSString * const LABEL_PH_PHONE_NUMBER = @"phone number here";
NSString * const LABEL_SMS_NOT_SUPPROTED = @"Your device doesn't support SMS!";
NSString * const LABEL_EMAIL_NOT_SUPPROTED = @"Your device doesn't support E-mail!";
NSString * const LABEL_LOCATION = @"Location";
NSString * const EMPTY_STR = @"";
NSString * const SEMICOLON_SEPARATOR = @",";
NSString * const LABEL_COMPOSE = @"Compose";
NSString * const LABEL_PREF = @"Pref";
NSString * const URL_LONG_PARAM = @"longitude";
NSString * const URL_LATI_PARAM = @"latitude";
NSString * const URL_TOKENS_PARAM = @"tokens";


