...
- (NSString *) getDistanceString:(CLLocationDistance) distance {
    NSString *title = @"";
    if(distance > 1000){
        title = [title stringByAppendingString : [NSString stringWithFormat:@"%.2f kilometers", distance/1000]];
    }else{
        if(distance < 10){
            title = [title stringByAppendingString : [NSString stringWithFormat:@"aprox 10 meters"]];
        }else{
            title = [title stringByAppendingString : [NSString stringWithFormat:@"%.0f meters", distance]];
        }
    }
    return title;
}
...
